97.1 done